--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -3,5 +3,11 @@
         "activityBar.background": "#4F1C31",
         "titleBar.activeBackground": "#6E2745",
         "titleBar.activeForeground": "#FEFCFC"
-    }
+    },
+    "python.testing.pytestArgs": [
+        "."
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.nosetestsEnabled": false,
+    "python.testing.pytestEnabled": true
 }
