--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,11 @@
         "titleBar.inactiveBackground": "#0e0f0999",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#0e0f09"
+    "peacock.color": "#0e0f09",
+    "python.testing.pytestArgs": [
+        "myenv"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.nosetestsEnabled": false,
+    "python.testing.pytestEnabled": true
 }
